log
Sat 18 May 2024 10:17:05 PM UTC: 
 tests:  0|5
total_score: 0/70
1cb0c7b
Sat 18 May 2024 10:18:50 PM UTC: 
 sudoku.c | 44 ++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 44 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_in_row_col’:
sudoku.c:67:10: error: unused variable ‘j’ [-Werror=unused-variable]
   67 |    int i,j;
      |          ^
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
   72 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
07bf6b3
Sat 18 May 2024 10:19:09 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_in_row_col’:
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
   72 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e79283d
Sat 18 May 2024 10:19:43 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
8dd71bf
Sat 18 May 2024 10:21:01 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
9bdfda5
Sat 18 May 2024 10:26:56 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
c154b31
Sat 18 May 2024 10:43:13 PM UTC: 
 sudoku.c | 25 +++++++++++++++----------
 1 file changed, 15 insertions(+), 10 deletions(-)
 tests:  0|5
total_score: 0/70
ec609f1
Sat 18 May 2024 10:43:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a35ecdf
Sat 18 May 2024 10:45:15 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
6464aaa
Sat 18 May 2024 10:48:43 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
8a76378
Sat 18 May 2024 10:56:35 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
946af87
Sat 18 May 2024 10:59:32 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
b5ccbee
Sat 18 May 2024 11:01:04 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
6ba56e9
Sat 18 May 2024 11:12:30 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  10|0
total_score: 70/70
567c3dc
